refactor sonar issues json path to list